# strongswan

./: configure.ac
conf/plugins/: kernel-netlink.opt
src/: Makefile.am
src/charon-systemd/: charon-systemd.c
src/libcharon/: Makefile.am
src/libcharon/encoding/payloads/: encrypted_fragment_payload.h  notify_payload.c  notify_payload.h  payload.c  payload.h
src/libcharon/sa/ikev1/: task_manager_v1.c
src/libcharon/sa/ikev2/: task_manager_v2.c
src/libhydra/plugins/kernel_netlink/: Makefile.am  kernel_netlink_ipsec.c  kernel_netlink_net.c  kernel_netlink_tests.c
src/libimcv/imc/: imc_msg.c
src/libimcv/imv/: imv_msg.c
src/swanctl/commands/: load_all.c
testing/tests/ikev2/net2net-fragmentation/: description.txt
